apps/actual-budget-tools/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget-tools
  namespace: actual-budget
  labels:
    app: actual-budget-tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: actual-budget-tools
